@@ -9,6 +9,8 @@
   - improve error message
   - precompile anon sub is always compiled
   - eval{ } need semicolon. Must be eval { };
+  - add chacaters position in compiler error message
+    Unexpected token "byte" at /home/kimoto/labo/SPVM/t/default/lib/TestCase/CompileError/Assign/ConstToNoConst.spvm line 5:30
 0.0413 2018-01-22
   - add replaceb
   - add replaces
